--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <!-- Next, define our custom logic for the to-do app -->
   <script type="module">
-    import { islands } from './my-islands-code.js';
+    import { islands } from './islands.js';
     import _ from 'lodash';
 
     // We can define custom code or methods by hooking into the island's signals or events.
